# openalpr

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  THIRD_PARTY_NOTICES.md
artifacts/configs/: openalpr.br.conf  openalpr.br.runtime.car.conf  openalpr.br.runtime.conf  openalpr.br2.conf  openalpr.br2.runtime.car.conf  openalpr.default.conf  openalpr.garagem.conf  openalpr.moto.conf  openalpr.moto_garagem.conf  openalpr.performance.conf
artifacts/proof/: java_bbox_proof.json  openalpr.selftest.conf  report.json
config/: openalpr.conf.defaults
docs/: alpr_tool.md
misc_utilities/: benchmark.sh  br_hybrid_compare.sh  profile_validation.sh
runtime_data/config/: br2_moto.conf  br_moto.conf
runtime_data/postprocess/: br.patterns  br2.patterns
scripts/: alpr-config.sh  fetch_onnxruntime.sh  install.sh
scripts/tests/: export_yolo.py  plate_accuracy.py  plate_logs_suite.sh  run_all.sh  thread_stress.sh  validate_json.py
src/: CMakeLists.txt  daemon.cpp  main.cpp
src/cli/: recognition_worker_process.cpp  recognition_worker_process.h
src/daemon/: process_worker_pool.cpp  process_worker_pool.h
src/openalpr/: CMakeLists.txt  alpr.h  alpr_impl.cpp  alpr_impl.h  config.cpp  config.h  pipeline_data.cpp  pipeline_data.h  result_aggregator.cpp
src/openalpr/detection/: detectorcpu.cpp  detectorcuda.cpp  detectorfactory.cpp  detectorfactory.h  (+3 more)
src/tools/: alpr_tool.cpp
src/tools/alpr-configurator/: CMakeLists.txt  configmodel.cpp  configmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  projectmodel.cpp  projectmodel.h
tools/: export_yolo.py
(+9 files in other folders)
